--- a/src/style.css
+++ b/src/style.css
@@ -708,9 +708,12 @@ input:focus {
     box-shadow: inset 0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.2);
 }
 
-#eq-knob::before {
-    background-color: var(--eq-center-color);
-    transition: background-color 0.1s ease;
+.knob-blue::before {
+    background-color: var(--accent-color-blue);
+}
+
+.knob-orange::before {
+    background-color: var(--accent-color-orange);
 }
 
 .connection-info {
